--- a/layouts/box/index.html
+++ b/layouts/box/index.html
@@ -39,9 +39,9 @@
           .container("#viz")
           .data(data)
           .type("box") // Escoge el tipo de visualizacion
-          .x("") // Escoge la variable en el eje de las X (Categoria)
-          .y("") // Escoge la variable en el eje de las y (Valores numericos)
-          .id("") // Escoge el id o label de los datos
+          .x("alive") // Escoge la variable en el eje de las X (Categoria)
+          .y("fare") // Escoge la variable en el eje de las y (Valores numericos)
+          .id("sex") // Escoge el id o label de los datos
           // .time('year') // Parametro opcional para identificar la evolucion en el tiempo: si los datos poseen temporalidad
           .draw()
 
