--- a/layouts/treemap/index.html
+++ b/layouts/treemap/index.html
@@ -42,8 +42,8 @@ function make_viz(data){
       .container("#viz")
       .data(data)
       .type("tree_map")
-      .id("") // Escoger categoria
-      .size("") // Escoger el tamaño de cada categoria
+      .id("Nombre Región Domicilio Familiar") // Escoger categoria
+      .size("Total Becados") // Escoger el tamaño de cada categoria
       .draw()
 }
 
