--- a/layouts/lines/index.html
+++ b/layouts/lines/index.html
@@ -29,7 +29,7 @@
 <script>
 
     // d3.json("data.json", function(error, ourdata) {
-    d3.json(".json", function(error, ourdata) {
+    d3.json("data.json", function(error, ourdata) {
       if (error) return console.error(error);
       make_viz(ourdata);
     });
@@ -39,10 +39,10 @@
           .container("#viz")
           .data(data)
           .type("line")
-          .id("RBD")
-          .text("ALTA")
-          .y("ALTA")
-          .x("AÑO")
+          .id("name")
+          .text("name")
+          .y("value")
+          .x("year")
           .draw()
     }
 
