--- a/layouts/pie/index.html
+++ b/layouts/pie/index.html
@@ -40,8 +40,8 @@
           .container("#viz")
           .data(data)
           .type("pie")
-          .id("") // Escoger nombre categoria
-          .size("") // Tamaño de la categoria
+          .id("Nombre Comuna") // Escoger nombre categoria
+          .size("Total Estudiantes") // Tamaño de la categoria
           .draw()
     }
 
